--- a/Demo_03_12_2020/BFS.ipynb
+++ b/Demo_03_12_2020/BFS.ipynb
@@ -327,9 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "conda install -c conda-forge voila"
    ]
