Dijkstra's_Shortest_Path_Algorithm

--- a/Visualize_Search/Simple/Dijkstra's_Shortest_Path_Algorithm.ipynb
+++ b/Visualize_Search/Simple/Dijkstra's_Shortest_Path_Algorithm.ipynb
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"a\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"a\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"a\", method='dijkstra', weight='weight'))"
    ]
   },
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"b\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"b\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"b\", method='dijkstra', weight='weight'))"
    ]
   },
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"c\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"c\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"c\", method='dijkstra', weight='weight'))"
    ]
   },
@@ -181,13 +181,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['b', 'c', 'd']\n",
+      "['b', 'g', 'd']\n",
       "3\n"
      ]
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"d\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"d\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"d\", method='dijkstra', weight='weight'))"
    ]
   },
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"e\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"e\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"e\", method='dijkstra', weight='weight'))"
    ]
   },
@@ -219,13 +219,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['b', 'g', 'f']\n",
+      "['b', 'g', 'e', 'f']\n",
       "6\n"
      ]
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"f\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"f\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"f\", method='dijkstra', weight='weight'))"
    ]
   },
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "print(nx.shortest_path(DG, source=\"b\", target=\"g\", method='dijkstra'))\n",
+    "print(nx.shortest_path(DG, source=\"b\", target=\"g\", method='dijkstra', weight='weight'))\n",
     "print(nx.shortest_path_length(DG, source=\"b\", target=\"g\", method='dijkstra', weight='weight'))"
    ]
   },
